k8s/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: survey-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: survey-frontend
  template:
    metadata:
      labels:
        app: survey-frontend
    spec:
      containers:
        - name: survey-frontend
          image: survey-frontend:latest
          ports:
            - containerPort: 3000

          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
