k8s/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: survey-frontend
spec:
  selector:
    app: survey-frontend
  ports:
    - port: 80
      targetPort: 3000
